--- a/game.tests/game.tests.csproj
+++ b/game.tests/game.tests.csproj
@@ -18,4 +18,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\game\game.csproj" />
+  </ItemGroup>
+
 </Project>
