Added piece enum

--- a/game.tests/game.tests.csproj
+++ b/game.tests/game.tests.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\game\game.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scenes\" />
+  </ItemGroup>
+
 </Project>
